--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>한남대학교 경영정보학과 홈페이지</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/ie.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
